# llm-guardrail-api-next

./: .dockerignore  .env.example  .gitignore  ADMIN_UI.md  BINDINGS.md  CHANGELOG.md  CODESPACES_CHECK.txt  CONFIG.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  Makefile  README.md  RELEASING.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  mypy.ini  openapi.json  pyproject.toml  pytest.ini  release-please-config.json  requirements-dev.txt  requirements.txt  ruff.toml  rules.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
app/: __init__.py  app.py  config.py  main.py  metrics_sanitizer.py  metrics_verifier.py  models.py  pydantic_base.py  redaction.py  runtime.py  schemas.py  settings.py
bench/: README.md  __init__.py  compare.py  egress_bench.py  runner.py  scenarios.yaml  tune_clarify.py  utils.py
cli/: __init__.py  audit_export.py
clients/python/: README.md  guardrail_client.py  pyproject.toml
clients/python/guardrail_api/: __init__.py  client.py  models.py
config/: admin_config.yaml  bindings.yaml
dashboards/: grafana_guardrail.json
deploy/: compose.audit-sink.yml
docker/: Dockerfile  entrypoint.sh
docs/: ARCHITECTURE.md  CONFIG.md  DEMO_KIT.md  DUAL_ARM_ISOLATION.md  DemoScript.md  ENDPOINTS.md  INTEGRATION.md  IntegrationOpenAI.md  OPENAI_AZURE_COMPAT.md  OperatorGuide.md  QUICKSTART.md  QUOTAS.md  Quickstart.md  README.md  RELEASE.md  SANITIZER.md  SHOWCASE_PACK.md  SLOs.md  UPGRADE.md  USAGE.md  VERIFIER_ADAPTERS.md  admin-config.md  admin-decisions.md  admin-ui.md  audit-export.md  audit_compression.md  audit_secret_rotation.md  client_quickstart.md  config-matrix.md  containers.md  decisions.md  demo-stack.md  enterprise-tests.md  execute-locked.md  flow-dual-arm.md  idempotency.md  observability.md  observability_promql.md  ops-quickstart.md  overview.md  (+10 more)
eval/: README.md  metrics.py  predictors.py  run_eval.py
examples/: __init__.py
k8s/: configmap-rules.yaml  deployment.yaml  secret-providers.yaml  service.yaml  servicemonitor-guardrail.yaml
ops/: README.md  health_app.py  healthcheck.py
perf/: README.md
policy/: defaults.yaml
postman/: Guardrail-API.postman_collection.json
prometheus/: alerts.yml
pytest_cov/: __init__.py
rulepacks/: gdpr.yaml  hipaa.yaml
scripts/: demo_traffic.py  export_openapi.py  install.sh  run_bench.sh  smoke.sh  tag_release.sh
tests/: __init__.py  conftest.py  test_admin_bindings.py  test_admin_bindings_resolve.py  test_audit_export.py  test_audit_fingerprint.py  test_audit_forwarder_gzip.py  test_audit_forwarder_integration.py  test_audit_logging.py  test_audit_receiver_gzip_rotation.py  test_audit_sizes.py  test_auth.py  test_auth_middleware.py  test_batch_endpoints.py  test_bench_utils.py  test_confusables_policy_metrics.py  (+69 more)
(+1007 files in other folders)
