[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "llm-guardrail-api-next"
version = "1.6.0"
description = "Minimal starter for a real-time LLM Guardrail API."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Name" }]
license = { text = "MIT" }

dependencies = [
  "fastapi>=0.112.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.1",
  "python-multipart>=0.0.9",
  "prometheus-client>=0.20.0",
  "Jinja2>=3.1.3",
  "confusable-homoglyphs>=3.2.0",
  "PyJWT>=2.9.0,<3.0.0",
  "httpx>=0.28.1",
  "redis>=5.0.0"
]

[project.optional-dependencies]
dev = [
  "ruff==0.6.9",
  "mypy==1.11.2",
  "pytest==8.3.3",
  "pytest-cov==5.0.0",
  "build>=1.2.1",
  "pytest-asyncio>=0.23.8",
  "types-redis",
  "types-requests",
  "types-PyYAML",
  "beautifulsoup4>=4.12.3",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["app"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
install_types = false
exclude = "(^docker/tools/)"

[tool.hatch.build.targets.wheel]
packages = ["app"]
