[project]
name = "guardrail-api"
version = "0.1.0rc1"
description = "Thin Python client for LLM Guardrail API"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name="Guardrail API"}]
dependencies = ["httpx>=0.27"]

[project.urls]
Homepage = "https://github.com/guardrail-dev/llm-guardrail-api-next"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["guardrail_api*"]
